--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,7 @@ body {
 }
 
 header {
+
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -39,11 +40,13 @@ nav ul {
 }
 
 nav ul li {
+
     display: inline;
     margin: 0 20px;
 }
 
 nav ul li a {
+
     text-decoration: none;
     color: #fff;
     font-weight: bold;
@@ -66,17 +69,6 @@ footer {
     position: relative;
 }
 
-.footer-container {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    text-align: center;
-}
-
-.footer-container p {
-    color: #fff;
-}
 
 main, section {
     text-align: center;
@@ -86,30 +78,6 @@ main, section {
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 10px;
     color: #fff;
-}
-
-/* Дополнительные стили для салона по покраске автомобилей */
-.main h2 {
-    font-size: 48px; /* Увеличенный текст на 50% */
-    margin-bottom: 20px;
-    color: #f5a623;
-}
-
-.main ul {
-    list-style: none;
-    padding: 0;
-}
-
-.main ul li {
-    margin: 10px 0;
-    font-size: 27px; /* Увеличенный текст на 50% */
-}
-
-.form label {
-    display: block;
-    font-size: 30px; /* Увеличенный текст на 50% */
-    margin: 10px 0;
-    color: #f5a623;
 }
 
 .form input[type="text"] {
@@ -139,6 +107,7 @@ main, section {
 
 /* Стили для модального окна */
 .modal {
+
     display: none;
     position: fixed;
     z-index: 1;
@@ -151,13 +120,11 @@ main, section {
 
 .modal-content {
     background-color: #222;
-    color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 10% auto;
+    padding: 2px;
+    border: 1px solid #888;
+    width: 30%;
+    text-align: center;
 }
 
 .close {
@@ -172,53 +139,16 @@ main, section {
     color: #f5a623;
 }
 
-/* Стили для кнопки "Контакты" */
-nav ul li#contact a {
+button {
+    background-color: #ffcc00;
+    color: #000;
+    padding: 20px 20px;
+    font-size: 1.44em; /* Increased by 20% */
+    border: none;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
-/* Добавьте анимации по вашему усмотрению */
-.animated {
-    animation-duration: 1s;
-    animation-fill-mode: both;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-.animated {
-    animation-name: fadeIn;
-}
-
-/* Стили модального окна */
-.modals {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.modals-content {
+button:hover {
     background-color: #fff;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 60%;
-}
-
-.close {
-    float: right;
-    font-size: 24px;
-    font-weight: bold;
-    cursor: pointer;
 }
